--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,30 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Log in to Facebook</title>
+    <link rel="stylesheet" href="login2.css" />
+  </head>
+  <body>
+    <h1 "><b>facebook</b></h1>
+   <div class="div">
+      <h4 style="color: white;" class="h3">Login to Facebook</h4>
+
+      <input
+        type="email"
+        id="email"
+        placeholder="   Email address or phone number"
+      />
+      <br /><br />
+      <input type="password" id="password" placeholder="    Password" />
+      <br /><br />
+      
+      <a href="https://www.youtube.com/"><button class="submit"  >Log in </button></a>
+       <br><br> 
+      <a href="https://www.facebook.com/login/identify/?ctx=recover&ars=facebook_login&from_login_screen=0"><h6 class="Forgotten">Forgotten account?. Sign up for facebook</h6></a>
+      <br><br><br>
+    </div>
+   
+  </body>
+</html>
